feat: 优化背景图

--- a/bilibili-lite/src/account/base.styl
+++ b/bilibili-lite/src/account/base.styl
@@ -165,22 +165,22 @@ li.security-list:hover span
   border 0 !important
 
 .coupon-wrapper
-  background-image: none
+  background-image none
 
 .security-nav-name
   margin 0 !important
 
 .finish-status
-  width: auto
+  width auto
 
 .indentify-page
-  min-height: auto !important
+  min-height auto !important
 
 .security_content
 .security-right
 .finish-status
   border 0
-  border-radius: 4px
+  border-radius 4px
   box-shadow none
 
 .home-top-level-mask-warp
