--- a/bilibili-lite/src/audio/base.styl
+++ b/bilibili-lite/src/audio/base.styl
@@ -2,7 +2,6 @@
 .contri-condition .contri-select.active::after
   display none !important
 
-#app
 .ticket-container
 .list-info .list-li.even
   background-color var(--c-background) !important
@@ -10,6 +9,9 @@
 .list-info .list-li.odd
 .song-change
   background-color var(--c-hover) !important
+
+#app
+  background-color transparent !important
 
 .music-upload-wrapper .upload-music-bar-wrapper .pload-music-bar-btn .pload-music-bar-btn-text
 .compila-condition .compila-type
