--- a/bilibili-lite/src/h/rank.styl
+++ b/bilibili-lite/src/h/rank.styl
@@ -27,7 +27,7 @@
   background-image none !important
 
 .rank-list-container .rank-list-wrapper
-  padding-bottom: 20px
+  padding-bottom 20px
 
 .rank-list-container .more
   position initial !important
