--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -57,16 +57,16 @@
 	width 100%
 
 .extension .ext-box
-	border-radius: 4px
-	background-color: var(--c-background)
+	border-radius 4px
+	background-color var(--c-background)
 
 .zone-list-box
 .manga-panel .manga-list-box
 	justify-content center
 	width 100% !important
 	height 480px !important
-	border-radius: 4px
-	background-color: var(--c-background)
+	border-radius 4px
+	background-color var(--c-background)
 
 #bili_anime .time-line .zone-list-box
 #bili_guochuang .time-line .zone-list-box
