--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -52,7 +52,7 @@
 	background-color var(--c-hover) !important
 
 .draw-full-cntr .function-bar.draw
-	background-color: var(--c-accent) !important
+	background-color var(--c-accent) !important
 
 .room-bg::after
 	background-image linear-gradient(0deg, var(--c-background), transparent 20%) !important
