--- a/bilibili-lite/src/manga/detail.styl
+++ b/bilibili-lite/src/manga/detail.styl
@@ -30,6 +30,6 @@
     content none !important
 
 .app-layout .size-ruler.p-relative
-  border-radius: 4px
+  border-radius 4px
   box-shadow none !important
   background-color var(--c-background) !important
