--- a/bilibili-lite/src/manga/home.styl
+++ b/bilibili-lite/src/manga/home.styl
@@ -46,8 +46,8 @@
   background-color var(--c-border)
 
 .app-layout .size-ruler.p-relative.m-auto
-	margin-top: 60px
-	padding: 20px
+  margin-top 60px
+  padding 20px
 
 .manga-navbar-history-list .action-button
 .manga-navbar-favourite-manga .action-button
