--- a/bilibili-lite/src/manga/ranking.styl
+++ b/bilibili-lite/src/manga/ranking.styl
@@ -20,12 +20,12 @@
 
 .ninnki-rank-ctnr
 .ouenn-rank-ctnr
-  padding: 20px
-  border-radius: 4px
-  background-color: var(--c-background) !important
+  padding 20px
+  border-radius 4px
+  background-color var(--c-background) !important
 
   .rank-item
-    margin-right: 15px !important
+    margin-right 15px !important
 
 .sidebar-item.activated
 .sidebar-item:hover
