--- a/bilibili-lite/src/member/academy.styl
+++ b/bilibili-lite/src/member/academy.styl
@@ -1,9 +1,14 @@
 /* 创作学院 */
-.up-index .bg01, .up-index .bg02
-  display: none !important
+.up-index .bg01
+.up-index .bg02
+.left-nav-wrapper .left-nav-logo
+.left-nav-wrapper .go-back-link .icon-back
+  display none !important
 
 .up-index .fixed-bar
-  background-color: var(--c-background) !important
+.btn-section .btn-item
+.list-header .filter-wrp .video-type
+  background-color var(--c-background) !important
 
 .carousel-wrap .panel .pic li
   background-color var(--c-hover) !important
@@ -12,6 +17,9 @@
 .list-header .filter-wrp .filter-level .line
 .list-header .filter-wrp .video-type .line
   background-color var(--c-border) !important
+
+.carousel-wrap .page .next.current
+  background-color var(--c-accent) !important
 
 .academy-left-name
 .up-index .fixed-bar .slogan
@@ -24,6 +32,12 @@
 .list-header .filter-wrp .article-type .bili-btn.current
 .list-header .filter-wrp .filter-level .bili-btn.current
 .list-header .filter-wrp .video-type .bili-btn.current
+.tabs-nav .tab-item:hover span
+.nav-child-opening .left-nav-item-child span
+.left-nav-childed .left-nav-childed-list.active .left-nav-item-childed span
+.left-nav-childed .left-nav-childed-list:hover .left-nav-item-childed span
+.left-nav-item-child:hover i
+.left-nav-item-child:hover span
   color var(--c-accent) !important
 
 .list-header .filter-wrp .article-type
@@ -33,21 +47,56 @@
 .tabs .customize-tab
   border-color var(--c-border) !important
 
+.carousel-wrap .page .next.current
+  border-color var(--c-accent) !important
+
 .tag-modal
 .steps .step-operate .dropdown .dropdown__content
   border 1px solid var(--c-border)
+
+.adademy-wrapper .index-banner
+  margin auto
+
+.left-nav-wrapper
+  padding-top 40px
+
+.course-item .academy-module-title
+  padding 0 20px
+
+.list-wrap .videos-wrap .video-list
+.customize-wrap .tabs
+.past-work .current-work-list .video-list
+  width auto
+
+.right-body
+  width 1080px
 
 .pager .jump-pager
   vertical-align middle
 
 .up-index .fixed-bar
-  border-top: 1px solid var(--c-border)
-  box-shadow: none
+  border-top 1px solid var(--c-border)
+  box-shadow none
 
 .tabs-nav .tab-item.border-bottom
   background-color transparent !important
   color var(--c-accent) !important
   border-color var(--c-accent) !important
+
+.course-item .official-wrap
+.course-item .series-wrap
+.course-item .fenlei-wrap
+.course-item .videos-wrap
+.course-item .carousel-wrap
+.list-wrap .videos-wrap .video-list
+.customize-wrap .tabs
+.customize-wrap .steps
+.customize-wrap .customize-wrap
+.past-work .current-work-list .video-list
+.banner-desc>p
+  padding 20px
+  border-radius 4px
+  background-color var(--c-background)
 
 .tabs-nav .tab-item.full
   background-color var(--c-accent) !important
