--- a/bilibili-lite/src/member/index.styl
+++ b/bilibili-lite/src/member/index.styl
@@ -5,7 +5,8 @@ url-prefix("https://cm.bilibili.com/") {
 	@import 'sidebar'
 	@import 'base'
 }
-@-moz-document url-prefix("https://cm.bilibili.com/") {
+@-moz-document url-prefix("https://member.bilibili.com/academy/"),
+url-prefix("https://cm.bilibili.com/") {
 	/* 创作学院 */
 	@import 'academy'
 }
