--- a/bilibili-lite/src/member/sidebar.styl
+++ b/bilibili-lite/src/member/sidebar.styl
@@ -3,7 +3,6 @@
 .border-line
   display none !important
 
-.cc-nav-wrp
 .nav-upload-container
   background-color var(--c-background) !important
 
@@ -42,12 +41,10 @@
 .slider-bar .bar-item .bcc-nav-slider-sub-menu .router-item.active i
 .slider-bar .bar-item .bcc-nav-slider-sub-menu .router_wrap.active
 .slider-bar .bar-item .bcc-nav-slider-sub-menu .router_wrap.active i
+.slider-bar .bar-item .bcc-nav-slider-sub-menu .router-item.active .menu-title
 .left-nav-list.active .left-nav-item i
 .left-nav-list.active .left-nav-item span
   color var(--c-accent) !important
-
-.cc-nav-wrp
-  border-color var(--c-border) !important
 
 .nav-upload-container
   border 1px solid var(--c-border)
@@ -58,3 +55,11 @@
 .bcc-nav-slider-item__wrap
 .bcc-nav-slider-sub-menu
   transition background-color 0.3s ease-in-out !important
+
+.cc-nav-wrp
+  margin-top 60px
+  padding-top 0
+  padding-bottom 60px
+  height calc(100% - 60px)
+  border-color var(--c-border) !important
+  background-color transparent !important
