--- a/bilibili-lite/src/message/base.styl
+++ b/bilibili-lite/src/message/base.styl
@@ -57,8 +57,8 @@
 	border-color var(--c-border) !important
 
 .action-menu .menu-list:before
-	border-top-color: var(--c-border) !important
-	border-right-color: var(--c-border) !important
+	border-top-color var(--c-border) !important
+	border-right-color var(--c-border) !important
 
 .text-box
 	width auto !important
