--- a/bilibili-lite/src/passport/base.styl
+++ b/bilibili-lite/src/passport/base.styl
@@ -23,8 +23,8 @@
   background-color transparent !important
 
 .container .container
-  border-radius: 4px
-  background-color: var(--c-background)
+  border-radius 4px
+  background-color var(--c-background)
 
 .title-line
   margin-top 70px
