--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -106,6 +106,8 @@ button
 .watch-later-list header .s-btn
 .login-btn
 .vote-btn-box .vote-btn
+.bcc-pagination-item.selected
+.qa-area-ol-wrp .qa-area-ol-btn
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -224,6 +226,7 @@ button
 .bind-info .note-footer .btn-group .common-btn
 .watch-later-list header .d-btn
 .cinema-movie-wrapper .slider-contro span
+.bcc-pagination-item
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
