--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -121,6 +121,7 @@
 
 .van-popper-avatar .level-bar
 .bili-header-m .profile-m .grade .bar
+.video-preview .bar
 	background-color var(--c-border) !important
 
 .van-popper-avatar .links .link-item:hover
@@ -134,6 +135,7 @@
 .bili-header-m .profile-m .grade .bar .rate
 .bp-red-point
 .vip.vip--green
+.video-preview .progress
 	background-color var(--c-accent) !important
 
 .lang-change .lang-item .lang-title
