--- a/bilibili-lite/src/read/home.styl
+++ b/bilibili-lite/src/read/home.styl
@@ -116,7 +116,7 @@
 
 .article-list .article-list-holder
   padding 20px
-  border-radius: 4px
+  border-radius 4px
   background-color var(--c-background)
 
 .page-content .left-side .article-list .article-list-holder .article-item
