--- a/bilibili-lite/src/v/blackboard.styl
+++ b/bilibili-lite/src/v/blackboard.styl
@@ -13,7 +13,6 @@
 #webShare .bili-share-pc
 .bili-share-pc .weixin-hover .qr-before
 .bili-share-pc .share-weixin-qr
-// body[style]
 #uplist .up-card
   background-color var(--c-background) !important
 
@@ -78,9 +77,9 @@
 
 .act-list
 .help-content
-  padding: 20px
-  border-radius: 4px
-  background-color: var(--c-background)
+  padding 20px
+  border-radius 4px
+  background-color var(--c-background)
 
 .act-list ul li
   border-color var(--c-border) !important
