--- a/bilibili-lite/src/v/cheese.styl
+++ b/bilibili-lite/src/v/cheese.styl
@@ -1,11 +1,16 @@
 /* 我的课程 */
-.wrap
+.bili-header-m .nav-search-box
+  display none
+
 .tickets .nav
   background-color var(--c-background) !important
 
 .wrap .left .tabbar .router-link-active
 .wrap .left .tabbar .tab_item:hover
   background-color var(--c-hover) !important
+
+.wrap
+  background-color transparent !important
 
 .tickets .nav .navtab
   color var(--c-title) !important
