--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -29,6 +29,7 @@
 .bilibili-player .bilibili-player-area .bilibili-player-video-wrap .bilibili-player-volumeHint
 #bofqi.mini-player .drag-bar
 .video-page-card .card-box .pic-box
+.danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-management
 	background-color var(--c-hover) !important
 
 .main-container .media-info .media-right .pub-wrapper .up-info-wrapper .split-line
@@ -115,6 +116,8 @@ ul.star-wrapper li i.icon-star-full
 .up-info>a .up-name.vip
 .coin-dialog-mask .coin-operated .coin-title span
 .main-container .review-module .review-list .review-item .review-header .review-author.is-vip
+.danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-management>:hover
+.danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-management>:hover i
 	color var(--c-accent) !important
 
 .bilibili-player-feedback
@@ -158,8 +161,8 @@ ul.star-wrapper li i.icon-star-full
 	fill var(--c-accent) !important
 
 .comment-m
-	padding: 20px
-	border-radius: 4px
+	padding 20px
+	border-radius 4px
 
 .bilibili-player-video-bottom-area .bilibili-player-video-sendbar
 .tag-info-pane
@@ -185,6 +188,7 @@ ul.star-wrapper li i.icon-star-full
 .open-dialog-masker .open-dialog-content .__dialog-header
 .video-toolbar .ops .share .share-pos .box-b
 .bilibili-player-video-bottom-area .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-inputbar-wrap
+.danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-management .player-auxiliary-fl
 	border-color var(--c-border) !important
 
 .video-toolbar .ops .share .share-pos
