--- a/bilibili-lite/src/blackroom/base.styl
+++ b/bilibili-lite/src/blackroom/base.styl
@@ -14,7 +14,7 @@
   background-color var(--c-border) !important
 
 .select-wrap .select-txt
-  background-color: transparent !important
+  background-color transparent !important
 
 .banner-bg-b
   background-image none !important
@@ -44,13 +44,13 @@
   margin-bottom 60px !important
 
 .fjw-entry
-  width: auto !important
+  width auto !important
 
 .ban-header
   padding-right 30px !important
 
   .top-ul
-    border-radius: 4px
+    border-radius 4px
     background-color var(--c-background) !important
 
 .ban-detail .content-box .info-wrap
