--- a/bilibili-lite/src/public/bannerHeader.styl
+++ b/bilibili-lite/src/public/bannerHeader.styl
@@ -88,7 +88,7 @@
 	flex 1
 
 .van-popper-channel
-	width: auto !important
+	width auto !important
 
 .van-popper-channel .sub-item
 	max-height none
