--- a/bilibili-lite/src/public/base.styl
+++ b/bilibili-lite/src/public/base.styl
@@ -10,7 +10,8 @@ html
 	background-repeat no-repeat
 
 body
-	height 100%
+	height auto
+	min-height 100vh
 	overflow-x hidden
 	background-color var(--c-bg-mask)
 	background-image none
