--- a/bilibili-lite/src/public/feed.styl
+++ b/bilibili-lite/src/public/feed.styl
@@ -62,7 +62,7 @@
   height auto !important
 
 .card-content .repost
-  margin-right: 20px
+  margin-right 20px
 
 .video-container
 .article-container
