--- a/bilibili-lite/src/read/info.styl
+++ b/bilibili-lite/src/read/info.styl
@@ -48,7 +48,7 @@
 .page-container
   padding 20px
   width auto
-  border-radius: 4px
+  border-radius 4px
   background-color var(--c-background)
 
 .article-holder
