--- a/bilibili-lite/src/show/base.styl
+++ b/bilibili-lite/src/show/base.styl
@@ -156,8 +156,8 @@
   height 30px !important
 
 .pagination-wrapper
-  margin-bottom: 0
-  padding-bottom: 30px
+  margin-bottom 0
+  padding-bottom 30px
 
 .detail-content-wrapper
   flex-wrap wrap
