--- a/bilibili-lite/src/t/base.styl
+++ b/bilibili-lite/src/t/base.styl
@@ -17,6 +17,7 @@
 .row
 .vote-result-comment
 #bp-app
+.detail-content .detail-card .card
   background-color var(--c-background) !important
 
 .core-style
@@ -80,6 +81,7 @@
 .new-notice-bar:hover .message
 .joined-number
 .expand-btn
+.card .button-area .more-button:hover
   color var(--c-accent) !important
 
 .upload-image .upload-btn
@@ -87,6 +89,7 @@
 .button-bar::before
 .vote-number
 .option-li
+.detail-content .detail-card .card
   border-color var(--c-border) !important
 
 .tab-wrap .tab-item.active
@@ -115,6 +118,7 @@
   margin-top 40px
 
 .home-page .home-container .home-content .center-panel
+.detail-content .detail-card
   width 900px !important
 
 #app .page-container .center-container
