--- a/bilibili-lite/src/v/list.styl
+++ b/bilibili-lite/src/v/list.styl
@@ -28,6 +28,8 @@
 .mod-2 li
 .mod-2 li .l-item
 .zr_recomd ul li
+.primary-menu .nav-menu .side-nav .square-wrap .square-field
+.primary-menu .nav-menu .side-nav .square-wrap .live-field
   border-color var(--c-border)
 
 .zr_recomd .b-head
