--- a/bilibili-lite/src/video/danmaku.styl
+++ b/bilibili-lite/src/video/danmaku.styl
@@ -1,5 +1,6 @@
 /* 弹幕列表 */
 .v-wrap .danmaku-wrap
+.main-container .plp-r .danmaku-box .danmaku-wrap
 .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .bscroll-vertical-scrollbar.mousedown
 .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap:hover .bscroll-vertical-scrollbar
 	background-color var(--c-background) !important
