--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -52,6 +52,8 @@
 	background-color var(--c-hover) !important
 
 .draw-full-cntr .function-bar.draw
+.tab-candidate>span:after
+.tabs .item>span:after
 	background-color var(--c-accent) !important
 
 .room-bg::after
