--- a/bilibili-lite/src/member/base.styl
+++ b/bilibili-lite/src/member/base.styl
@@ -227,6 +227,7 @@ i.icon-shape:after
 .danmu-item .right-block .delete-protect div:hover
 .stat-card .num .text
 .comment_wrap .operate_wrap .operate_right .operate-txt.active
+.qa-area-ol-wrp .qa-icon
   color var(--c-accent) !important
 
 .bili-share-pc
