--- a/bilibili-lite/src/v/base.styl
+++ b/bilibili-lite/src/v/base.styl
@@ -99,6 +99,7 @@
 .hot-recom-wrapper .hot-trailer .player-list .list-count .num
 .filter-block .filter-item-wrapper .filter-item:hover
 .sub-nav-m ul li a:hover
+.cinema-home-crumb ul li.on a
 	color var(--c-accent) !important
 
 .primary-menu.border-b
@@ -108,10 +109,12 @@
 .copyright-detail
 .hot-recom-wrapper .hot-trailer .player-list .list-item-wrap .list-item .list-cover
 .rank-wrap .head-section .more span
+.chief-thumb-item
 	border-color var(--c-border) !important
 
 .battery-item.active .battery-bg
 .hot-recom-wrapper .hot-trailer .player-list .list-item-wrap .list-item.selected .list-cover
+.carousel-wrapper .carou-mini .thumb-cursor
 	border-color var(--c-accent) !important
 
 .hot-recom-wrapper .hot-trailer .player-list .list-item-wrap .list-item.selected .list-cover:after
