--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -1,10 +1,13 @@
 /* 主体 */
 .video-page-special-card
+.user-card-m iframe
+.bili-msg iframe
 	display none
 
 .bili-header-m .nav-menu .up-load .u-link
 	line-height 50px
 
+.user-card-m
 .collection-m
 .coin-operated-m
 .open-dialog-masker .open-dialog-content
@@ -148,6 +151,7 @@ ul.star-wrapper li i.icon-star-full
 	padding 10px
 
 .video-page-card .card-box .info .count.up
+.video-page-operator-card .info .count.up
 	width auto
 
 .bilibili-player-ending-panel
